--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,17 @@
 [project]
-authors = [{name = "keanesc", email = "145848994+keanesc@users.noreply.github.com"}]
-dependencies = ["wfdb>=4.3.1,<5", "numpy>=2.4.2,<3", "scipy>=1.17.0,<2", "pandas>=3.0.0,<4", "matplotlib>=3.10.8,<4", "neurokit2>=0.2.12,<0.3"]
+authors = [
+    { name = "keanesc", email = "145848994+keanesc@users.noreply.github.com" },
+]
+dependencies = [
+    "wfdb>=4.3.1,<5",
+    "numpy>=2.4.2,<3",
+    "pandas>=3.0.0,<4",
+    "matplotlib>=3.10.8,<4",
+    "scikit-learn>=1.8.0,<2",
+    "fastapi>=0.129.0,<0.130",
+    "uvicorn>=0.40.0,<0.41",
+    "joblib>=1.4.2,<2",
+]
 name = "time-series-analysis"
 requires-python = ">= 3.11"
 version = "0.1.0"
@@ -17,3 +28,21 @@ platforms = ["linux-64", "win-64", "osx-64"]
 time_series_analysis = { path = ".", editable = true }
 
 [tool.pixi.tasks]
+collect = "python -m time_series_analysis.task_1a_data_collection"
+clean = "python -m time_series_analysis.task_1b_artifact_detection"
+train = "python -m time_series_analysis.task_2a_anomaly_detection"
+score = "python -m time_series_analysis.task_2b_risk_scoring"
+evaluate = "python -m time_series_analysis.task_3a_metrics"
+failures = "python -m time_series_analysis.task_3b_failure_analysis"
+serve = "uvicorn time_series_analysis.task_4a_api:app --reload"
+start = "uvicorn time_series_analysis.task_4a_api:app --host 0.0.0.0 --port 8000"
+all = { cmd = "echo runAll", depends-on = [
+    "collect",
+    "clean",
+    "train",
+    "score",
+    "evaluate",
+    "failures",
+    "serve",
+    "start",
+] }
